set(LLVM_LINK_COMPONENTS
  ${LLVM_TARGETS_TO_BUILD}
  BitReader
  IRReader
  Core
  Support
  Object
  Linker
  AsmPrinter
  CodeGen
  MC
  Passes
  AggressiveInstCombine
  Coroutines
  IPO
  InstCombine
  Instrumentation
  ScalarOpts
  TransformUtils
  Vectorize
  ObjCARCOpts
  Obfuscation
  SelectionDAG
  Target
)
add_llvm_tool(Noctilucence
  Noctilucence.cpp
  DEPENDS
  intrinsics_gen
)
target_link_libraries(Noctilucence  PRIVATE "/usr/lib/libxar.dylib")
